- Glove Embeddings to Fake Dataset - Some cleaning and organizing

--- a/squad/Sanity_Check_Create_FakeDataset_From_Range_N_Tokens.ipynb
+++ b/squad/Sanity_Check_Create_FakeDataset_From_Range_N_Tokens.ipynb
@@ -36,6 +36,9 @@
     "_voc_file_name_as_txt = '{}_voc.txt'\n",
     "voc_file_name_as_txt = os.path.join(datadir, _voc_file_name_as_txt.format('sanity_' + dataset_type ))\n",
     "\n",
+    "# _voc_counter_file_name_as_txt = '{}_voc_counter.txt'\n",
+    "# voc_counter_file_name = os.path.join(datadir, _voc_counter_file_name_as_txt.format('sanity_' + dataset_type ))\n",
+    "\n",
     "_qas_file_name = '{}_qas.csv'.format('sanity_' + dataset_type )\n",
     "qas_file = os.path.join(datadir, _qas_file_name)\n"
    ]
@@ -46,6 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lowercase=True\n",
     "tokens = defaultdict(int)\n",
     "print('Occurences of tokens in paragraphs and questions')\n",
     "for _ in [paragraphs_file_as_txt, questions_file_as_txt]:\n",
@@ -55,6 +59,8 @@
     "    with open(_, 'r') as fin:\n",
     "        for line in fin:\n",
     "            for token in line.strip().split():\n",
+    "                if lowercase:\n",
+    "                    token=token.lower()\n",
     "                tokens[token] +=1\n",
     "print('Done')"
    ]
@@ -75,8 +81,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Taking 10.000 tokens from the order of 100 to 10100 in the list')\n",
-    "sanity_tokens = tokens_[100:9100]"
+    "print('Total length of tokens: {}'.format(len(tokens_)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sanity_tokens = tokens_[100:10100]\n",
+    "print('Taking {} tokens from the order of 100 to 10100 in the list'.format(len(sanity_tokens)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sanity_tokens"
    ]
   },
   {
@@ -87,13 +111,14 @@
    "source": [
     "print('Based on sanity tokens, voc, paragraphs, questions and qas are getting created!')\n",
     "qas = []\n",
-    "with open(sanity_paragraphs_file_as_txt, 'w') as fp_out, open(sanity_questions_file_as_txt, 'w') as fq_out,open(voc_file_name_as_txt, 'w') as fv_out:\n",
+    "with open(sanity_paragraphs_file_as_txt, 'w') as fp_out,open(sanity_questions_file_as_txt, 'w') as fq_out,open(voc_file_name_as_txt, 'w') as fv_out:\n",
+    "    #,open(voc_counter_file_name, 'w') as fvc_out:\n",
     "    for _i, _t in enumerate(sanity_tokens):        \n",
     "        fp_out.write(_t[0] + '\\n')\n",
     "        fq_out.write(_t[0] + '\\n')\n",
-    "        fv_out.write(_t[0] + '\\n')        \n",
+    "        fv_out.write(_t[0] + '\\n')\n",
+    "        #fvc_out.write((_t[0] + ',' + str(_t[1]) + '\\n'))\n",
     "        qas.append((_i, _i))\n",
-    "        print(_i)\n",
     "df_qas = pd.DataFrame(data=qas, columns=['Paragraph_Id', 'Question_Id'])\n",
     "df_qas.to_csv(qas_file)\n",
     "print('Matchin Set is exported')"
