--- a/squad/sandbox_notebooks/2_Generate_Vectorized_Pairwise_Cosine_Similarity_Matrix_For_Q_P.ipynb
+++ b/squad/sandbox_notebooks/2_Generate_Vectorized_Pairwise_Cosine_Similarity_Matrix_For_Q_P.ipynb
@@ -48,11 +48,36 @@
     "_cos_similarity_results_file_name =  '{}_cos_similarity_with_{}_norm_for_q_vs_para.csv'\n",
     "cos_similarity_results_file_name = os.path.join(datadir, _cos_similarity_results_file_name)\n",
     "\n",
+    "_nearest_all_cos_similarity_results_file_name =  '{}_nearest_all_cos_similarity_with_{}_norm_for_q_vs_para.csv'\n",
+    "nearest_all_cos_similarity_results_file = os.path.join(datadir, _nearest_all_cos_similarity_results_file_name)\n",
+    "\n",
     "_cos_similarity_results_as_hist_file_name =  'histogram_{}_cos_similarity_with_{}_norm_for_q_vs_para.png'\n",
     "cos_similarity_results_as_hist_file = os.path.join(datadir, _cos_similarity_results_as_hist_file_name)\n",
     "\n",
+    "_paragraphs_file_name_as_txt = '{}_paragraphs.txt'.format(dataset_type)\n",
+    "paragraphs_file_as_txt = os.path.join(datadir, _paragraphs_file_name_as_txt)\n",
+    "\n",
+    "_questions_file_name_as_txt = '{}_questions.txt'.format(dataset_type)\n",
+    "questions_file_as_txt = os.path.join(datadir, _questions_file_name_as_txt)\n",
     "\n",
     "df_qas = pd.read_csv(qas_file).set_index(index_field)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_look_up = []\n",
+    "q_look_up = []\n",
+    "with open(paragraphs_file_as_txt, 'r') as fp_in,open(questions_file_as_txt, 'r') as fq_in:\n",
+    "    for i, line in enumerate(fp_in):\n",
+    "        p_look_up.append((i, line.replace('\\n','')))\n",
+    "    for i, line in enumerate(fq_in):\n",
+    "        q_look_up.append((i, line.replace('\\n','')))\n",
+    "df_p_look_up = pd.DataFrame(data=p_look_up, columns=['id', 'paragraph']).set_index('id')\n",
+    "df_q_look_up = pd.DataFrame(data=q_look_up, columns=['id', 'question']).set_index('id')"
    ]
   },
   {
@@ -83,30 +108,89 @@
     "    QUES = items[0]['matrix']\n",
     "    print('QUES Shape', QUES.shape)\n",
     "    PARA = items[1]['matrix']\n",
-    "    print('PARA Shape', PARA.shape)\n",
+    "    print('PARA Shape', PARA.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for norm_type in ['l2']:\n",
     "    print('Similarities are getting calculated !!!')\n",
     "    results = []\n",
-    "    for q_id, _ in enumerate(tqdm_notebook(QUES, total=len(QUES-1))):\n",
+    "    nearest_paragraphs = []\n",
+    "    for q_id, _ in enumerate(tqdm_notebook(QUES, total=len(QUES))):\n",
+    "        question = df_q_look_up[df_q_look_up.index == q_id].values[0][0]\n",
     "        q_vec = np.array([_]) \n",
     "        sk_sim = cosine_similarity(q_vec,PARA)[0]\n",
     "        actual_paragraph_id = df_qas[df_qas['Question_Id'] == q_id]['Paragraph_Id'].values[0]\n",
     "        similarities = np.argsort(-sk_sim)\n",
     "        order_of_the_actual_paragraph_id = np.where(similarities == actual_paragraph_id)[0][0] + 1\n",
     "        calculated_most_similar_1_paragraph = similarities[0]\n",
-    "        results.append((q_id, actual_paragraph_id,  order_of_the_actual_paragraph_id, sk_sim[actual_paragraph_id], calculated_most_similar_1_paragraph, sk_sim[calculated_most_similar_1_paragraph]))\n",
+    "        results.append((q_id, actual_paragraph_id,  \n",
+    "                        order_of_the_actual_paragraph_id, \n",
+    "                        sk_sim[actual_paragraph_id], \n",
+    "                        calculated_most_similar_1_paragraph, \n",
+    "                        sk_sim[calculated_most_similar_1_paragraph]))\n",
+    "        for i, nearest_paragraph_id in enumerate(similarities[0:5]):\n",
+    "            nearest_paragraphs.append((question, \n",
+    "                                       df_p_look_up[df_p_look_up.index == nearest_paragraph_id].values[0][0],\n",
+    "                                       i+1, \n",
+    "                                       sk_sim[nearest_paragraph_id] ))\n",
+    "        \n",
+    "        \n",
     "    \n",
-    "    df_results= pd.DataFrame(data=results, columns=['Question_Id', 'Actual_Paragraph_Id', \n",
-    "                                                 'Order Index of Actual_Paragraph_Id in Similarities List',\n",
-    "                                                 'Similarity Score for Actual_Paragraph_Id',\n",
-    "                                                 'Calculated Top 1 Most Similar Paragraph', \n",
-    "                                                 'Similarity Score for Most Similar Paragraph'\n",
-    "                                                ])\n",
-    "    df_results.to_csv(cos_similarity_results_file_name.format(dataset_type, norm_type), index=False)\n",
-    "    ax = df_results['Order Index of Actual_Paragraph_Id in Similarities List'].hist(bins=range(min(df_results['Order Index of Actual_Paragraph_Id in Similarities List']), max(df_results['Order Index of Actual_Paragraph_Id in Similarities List']) + 1, 1))\n",
-    "    fig = ax.get_figure()\n",
-    "    fig.savefig(cos_similarity_results_as_hist_file.format(dataset_type, norm_type))\n",
+    "\n",
     "\n",
     "print('Done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nearest_paragraphs = pd.DataFrame(data=nearest_paragraphs, columns=['question', 'paragraph', 'nearest_order', 'cos_similarity'])\n",
+    "df_nearest_paragraphs.to_csv(nearest_all_cos_similarity_results_file.format(dataset_type, norm_type), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results= pd.DataFrame(data=results, columns=['Question_Id', 'Actual_Paragraph_Id', \n",
+    "                                             'Order Index of Actual_Paragraph_Id in Similarities List',\n",
+    "                                             'Similarity Score for Actual_Paragraph_Id',\n",
+    "                                             'Calculated Top 1 Most Similar Paragraph', \n",
+    "                                             'Similarity Score for Most Similar Paragraph'\n",
+    "                                            ])\n",
+    "df_results.to_csv(cos_similarity_results_file_name.format(dataset_type, norm_type), index=False)\n",
+    "ax = df_results['Order Index of Actual_Paragraph_Id in Similarities List'].hist()\n",
+    "fig = ax.get_figure()\n",
+    "fig.savefig(cos_similarity_results_as_hist_file.format(dataset_type, norm_type))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sk_sim[124]"
    ]
   }
  ],
