- Combined everything in one notebook

--- a/squad/ELMO_Analysis_with_PyTorch.ipynb
+++ b/squad/ELMO_Analysis_with_PyTorch.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "/home/jackalhan/Development/github/more_meaningful_representations/venv36/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
+      "  \"\"\")\n"
+     ]
+    }
+   ],
    "source": [
     "from allennlp.commands.elmo import ElmoEmbedder\n",
     "import spacy\n",
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,9 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total length of tokens: 28151\n",
+      "Taking 10000 tokens from the order of 100 to 10100 in the list\n"
+     ]
+    }
+   ],
    "source": [
     "if execute_as_fake:\n",
     "    token_counts = Counter([token for token in traverse(tokenized_paragraphs + tokenized_questions)])\n",
@@ -309,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,9 +374,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "9999it [01:05, 151.76it/s]\n",
+      "9999it [01:06, 151.45it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "create_and_dump_embeddings(ee, paragraphs_file_as_txt, embedding_paragraph_file_as_h5py)\n",
     "create_and_dump_embeddings(ee, questions_file_as_txt, embedding_question_file_as_h5py)"
@@ -372,9 +401,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings will be executed by the following configs: \n",
+      "{'slice_type': 'All', 'slice_index': None, 'axis': (0, 1)}\n"
+     ]
+    }
+   ],
    "source": [
     "dims = 1024\n",
     "slices = [{'slice_type':'All',\n",
@@ -404,25 +442,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings are getting processed!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "20272a409fa54afb89becd8fb903e5df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=9999), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Paragraphs shape (9999, 1, 1, 1024)\n",
+      "Paragraphs shape (9999, 1024)\n",
+      "Embeddings are getting processed!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "087991ed80504eaf9c984d1dab693d42",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=9999), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Questions shape MEAN (9999, 1, 1, 1024)\n",
+      "Questions shape MEAN (9999, 1024)\n"
+     ]
+    }
+   ],
    "source": [
     "# -------------------------- Paragraphs\n",
     "embedded_paragraphs = read_embeddings(embedding_paragraph_file_as_h5py, \n",
     "                                      selected_slice_conf['slice_index'], \n",
     "                                      selected_slice_conf['axis'])\n",
     "print('Paragraphs shape', embedded_paragraphs.shape)\n",
-    "embedded_paragraphs_means_with_all_slices = np.reshape(embedded_paragraphs_means_with_all_slices, \n",
-    "                                                      (embedded_paragraphs_means_with_all_slices.shape[0], dims))\n",
+    "embedded_paragraphs_means_with_all_slices = np.reshape(embedded_paragraphs, \n",
+    "                                                      (embedded_paragraphs.shape[0], dims))\n",
     "print('Paragraphs shape', embedded_paragraphs_means_with_all_slices.shape)\n",
     "# -------------------------- Questions\n",
     "embedded_questions = read_embeddings(embedding_question_file_as_h5py,\n",
     "                                     selected_slice_conf['slice_index'], \n",
     "                                     selected_slice_conf['axis'])\n",
     "print('Questions shape MEAN', embedded_questions.shape)\n",
-    "embedded_questions_means_with_all_slices = np.reshape(embedded_questions_means_with_all_slices, \n",
-    "                                                      (embedded_questions_means_with_all_slices.shape[0], dims))\n",
+    "embedded_questions_means_with_all_slices = np.reshape(embedded_questions, \n",
+    "                                                      (embedded_questions.shape[0], dims))\n",
     "print('Questions shape MEAN', embedded_questions_means_with_all_slices.shape)"
    ]
   },
