- Combined everything in one notebook

--- a/squad/ELMO_Analysis_with_PyTorch.ipynb
+++ b/squad/ELMO_Analysis_with_PyTorch.ipynb
@@ -9,20 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jackalhan/Development/github/more_meaningful_representations/venv36/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "/home/jackalhan/Development/github/more_meaningful_representations/venv36/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
-      "  \"\"\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from allennlp.commands.elmo import ElmoEmbedder\n",
     "import spacy\n",
@@ -46,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,18 +129,18 @@
     "    with open(file_path, 'w') as fout:\n",
     "        for context in tokenized_contexts:\n",
     "            fout.write(' '.join(context) + '\\n')\n",
-    "\n",
+    "        fout.write('\\n')\n",
     "def create_voc(tokenized_contexts:list):\n",
     "    all_tokens = set(['<S>', '</S>', '<UNK>'])\n",
     "    for context in tokenized_contexts:\n",
     "        for token in context:\n",
-    "            if token.strip():\n",
-    "                all_tokens.add(token)\n",
+    "            all_tokens.add(token)\n",
     "    return all_tokens\n",
     "\n",
     "def dump_voc(vocs:set, file_path:str):\n",
     "    with open(file_path, 'w') as fout:\n",
     "        fout.write('\\n'.join(vocs))\n",
+    "        fout.write('\\n')\n",
     "        \n",
     "def create_and_dump_embeddings(embedder, \n",
     "                               tokenized_contexts_file_path:str, \n",
@@ -241,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,30 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total length of tokens: 28151\n",
-      "Taking 10000 tokens from the order of 100 to 10100 in the list\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if execute_as_fake:\n",
     "    token_counts = Counter([token for token in traverse(tokenized_paragraphs + tokenized_questions)])\n",
     "    token_counts = [(k, token_counts[k]) for k in sorted(token_counts, key=token_counts.get, reverse=True)]\n",
     "    print('Total length of tokens: {}'.format(len(token_counts)))\n",
-    "    sanity_tokens = token_counts[100:10100]\n",
-    "    print('Taking {} tokens from the order of 100 to 10100 in the list'.format(len(sanity_tokens)))\n",
+    "    sanity_tokens = token_counts[100:5100]\n",
+    "    print('Taking {} tokens from the list'.format(len(sanity_tokens)))\n",
     "    sanity_tokens = [[k] for k, v in sanity_tokens]\n",
     "    dump_tokenized_contexts(sanity_tokens, paragraphs_file_as_txt)\n",
     "    dump_tokenized_contexts(sanity_tokens, questions_file_as_txt)\n",
     "    paragraphs, questions = read_fake_data(paragraphs_file_as_txt, questions_file_as_txt)\n",
-    "    "
+    "    dump_voc([k for k in traverse(sanity_tokens)], vocab_file)"
    ]
   },
   {
@@ -329,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,18 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "9999it [01:05, 151.76it/s]\n",
-      "9999it [01:06, 151.45it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "create_and_dump_embeddings(ee, paragraphs_file_as_txt, embedding_paragraph_file_as_h5py)\n",
     "create_and_dump_embeddings(ee, questions_file_as_txt, embedding_question_file_as_h5py)"
@@ -401,18 +372,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embeddings will be executed by the following configs: \n",
-      "{'slice_type': 'All', 'slice_index': None, 'axis': (0, 1)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dims = 1024\n",
     "slices = [{'slice_type':'All',\n",
@@ -442,94 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embeddings are getting processed!\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20272a409fa54afb89becd8fb903e5df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=9999), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Paragraphs shape (9999, 1, 1, 1024)\n",
-      "Paragraphs shape (9999, 1024)\n",
-      "Embeddings are getting processed!\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "087991ed80504eaf9c984d1dab693d42",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=9999), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Questions shape MEAN (9999, 1, 1, 1024)\n",
-      "Questions shape MEAN (9999, 1024)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -------------------------- Paragraphs\n",
     "embedded_paragraphs = read_embeddings(embedding_paragraph_file_as_h5py, \n",
@@ -543,10 +420,10 @@
     "embedded_questions = read_embeddings(embedding_question_file_as_h5py,\n",
     "                                     selected_slice_conf['slice_index'], \n",
     "                                     selected_slice_conf['axis'])\n",
-    "print('Questions shape MEAN', embedded_questions.shape)\n",
+    "print('Questions shape', embedded_questions.shape)\n",
     "embedded_questions_means_with_all_slices = np.reshape(embedded_questions, \n",
     "                                                      (embedded_questions.shape[0], dims))\n",
-    "print('Questions shape MEAN', embedded_questions_means_with_all_slices.shape)"
+    "print('Questions shape', embedded_questions_means_with_all_slices.shape)"
    ]
   },
   {
@@ -570,6 +447,15 @@
     "\n",
     "dump_nearest_neighbors(nearest_neighbors, \n",
     "                       nearest_all_cos_similarity_results_file.format(dataset_type,selected_slice_conf['slice_type']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(paragraphs)"
    ]
   }
  ],
